--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/styles.css">
     <title>API OPAC Univalle</title>
 </head>
 <body>
-    <h1>Acceso denegado</h1>
+    <header>
+        <h1>API OPAC Univalle</h1>
+    </header>
+    <main>
+        <section>
+            <h2>Acceso denegado</h2>
+            <p>Este proyecto nacio fruto de una investigación</p>
+        </section>
+    </main>
 </body>
 </html>
