--- a/public/index.html
+++ b/public/index.html
@@ -4,17 +4,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <title>API OPAC Univalle</title>
 </head>
 <body>
-    <header>
-        <h1>API OPAC Univalle</h1>
-    </header>
     <main>
+        <h1>API OPAC Univalle</h1>
         <section>
-            <h2>Acceso denegado</h2>
-            <p>Este proyecto nacio fruto de una investigación</p>
-        </section>
+            <p>Aquí podrás encontrar una increíble API que te permite realizar consultas al sistema desde tu dispositivo móvil. ¿Por qué? Porque sabemos que no siempre es fácil acceder al catálogo desde tu teléfono. ¡Pero no te preocupes, estamos aquí para ayudarte!</p>
+            <p>Queremos destacar que la velocidad de respuesta puede depender de la velocidad del sistema web OPAC. Utilizamos métodos de Web Scraping para obtener la información necesaria y brindarte una experiencia única.</p>
+            <p>Recuerda que este proyecto tiene fines educativos, ¡así que diviértete explorando y aprendiendo! Si tienes alguna pregunta, no dudes en contactarnos.</p> 
+            <p>¡Disfruta del viaje!</p>
+        </section>  
     </main>
+    <div class="button-container">
+        <a href="https://github.com/code3743/OPAC-Univalle-API" target="_blank" class="button">
+          <i class="fab fa-github"></i>
+          Repositorio
+        </a>
+ 
+        <a href="https://www.instagram.com/jotalopezr/" target="_blank" class="button">
+          <i class="fab fa-instagram"></i>
+          Instagram
+        </a>
+        <a href="https://github.com/code3743/code3743" target="_blank" class="button">
+            <i class="fab fa-github"></i>
+            GitHub
+          </a>
+      </div>
+      
+    <div class="container">
+        <h1>Registros de Log</h1>
+        <pre id="log-content"></pre>
+      </div>
+    <script src="./js/scripts.js"></script>
 </body>
 </html>
